positional_derive/tests/ui/wrong-filler-type.stderr
error: wrong field configuration

         = help: the filler configuration should be a char

 --> tests/ui/wrong-filler-type.rs:5:5
  |
5 |     #[field(size = 10, filler = "a")]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
